# characterize-pruning

./: .gitignore  README.html  README.md  README.org  acc-check.sh  config.py  foo.py  lat-check.sh  prune.py  prune.sh  pyproject.toml  requirements.txt  train.py  train.sh
asserts/: net.py
asserts/notes/: b3-str.txt  d169-str.txt  d201-str.txt  mobl-str.txt  mobs-str.txt  vb16-str.txt
benchmark/: acc-check.py  lat-check.py
utils/: dataloader.py  iters.py  model.py  saver.py
