[tool.poetry]
name = "gace-pruning-experiment"
version = "0.1.0"
description = ""
authors = ["Rakandhiya Daanii Rachmanto <rakandhiya.daanii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
tqdm = "^4.66.4"
numpy = "^1.26.4"
scipy = "^1.13.1"
pillow = "^10.3.0"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
